Agregar funciones de Listar y Buscar

--- a/src/examen/JFrame.form
+++ b/src/examen/JFrame.form
@@ -13,6 +13,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Salir"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonSalirActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -159,6 +162,8 @@
                   <Component id="botonPanelModificar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="botonPanelEliminar" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="botonEliminarFiltro" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -170,6 +175,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="botonPanelModificar" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="botonPanelEliminar" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="botonEliminarFiltro" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="15" max="32767" attributes="0"/>
               </Group>
@@ -191,6 +197,14 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonPanelEliminarActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="botonEliminarFiltro">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Eliminar Filtro"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonEliminarFiltroActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
